# Parallel-DNA-Sequence-Matcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
common/: dna_utils.cpp  kmp.cpp  smith_waterman.cpp
data/: gen_sequences.py  sample.fasta  sequences.fasta  test_large.fasta
include/: dna_utils.h  kmp.h  smith_waterman.h
mpi/: main_mpi.cpp
opencl/: kmp_kernel.cl  main_opencl.cpp  sw_kernel.cl
openmp/: main_openmp.cpp
sequential/: main_sequential.cpp
ui/: app_state.h  benchmark_panel.cpp  main_ui.cpp  pattern_search.cpp  pattern_search.h  sw_visualizer.cpp
